--- a/templates/articles.html
+++ b/templates/articles.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsBalancer - Articles</title>
 
-    <!-- Modern CSS Framework -->
-    <link rel="stylesheet" href="/static/assets/css/main.css" />
+    <!-- Unified CSS System -->
+    <link rel="stylesheet" href="/static/css/app.css?v=1" />
 
     <!-- HTMX for dynamic functionality -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
