--- a/templates/article_htmx.html
+++ b/templates/article_htmx.html
@@ -6,7 +6,7 @@
     <title>{{.Article.Title}} - NewsBalancer</title>
     <!-- HTMX CDN -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    <style>
+    <link rel="stylesheet" href="/static/css/app-consolidated.css?v=1" />
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
