--- a/templates/articles_htmx.html
+++ b/templates/articles_htmx.html
@@ -8,8 +8,8 @@
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <!-- HTMX Extensions -->
     <script src="https://unpkg.com/htmx.org/dist/ext/loading-states.js"></script>
-    <style>
-        body {
+    <link rel="stylesheet" href="/static/css/app-consolidated.css?v=1" />
+
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             margin: 0;
